finish menu, and section left

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <header>
         <nav class="nav1">This Interior</nav>
-        <nav class="nav2">Home</nav>
-        <nav class="nav2">Collection</nav>
-        <nav class="nav2">About</nav>
-        <nav class="nav2">Contact</nav>
+        <nav class="nav2, nav3">Home</nav>
+        <nav class="nav3">Collection</nav>
+        <nav class="nav3">About</nav>
+        <nav class="nav3">Contact</nav>
     </header>
     <main class="container">
         <section class="container-left">
@@ -22,7 +22,7 @@
             <a href="#">Read more </a>
         </section>
         <section class="container-right">
-            <section class="">
+            <section class="container-right_img">
                 <img src="./img/photo1.png" alt="interior design" width="900px" height="600px">
             </section>
             <section >
@@ -37,7 +37,7 @@
             </section>
         </section>
     </main>
-    <footer>created by <span>VisiGoyo</span> - devChallenges.io</footer>
+    <footer>created by <span><a href="https://visigoyo.com/">VisiGoyo</a></span> - devChallenges.io</footer>
     
 </body>
 </html>
