css from profile, add z index position, finish desktop view

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <section class="container-right_img">
                 <img src="./img/photo1.png" alt="interior design" width="900px" height="600px">
             </section>
-            <section >
+            <section class="container-right_down">
                 <section class="container-right_section">
                 <img src="./img/photo2.png" alt="author face" width="85px" height="72px">
                 <article>
