preparing hamburguer menu

--- a/index.html
+++ b/index.html
@@ -8,12 +8,25 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+   
+  
     <header>
-        <nav class="nav1">This Interior</nav>
-        <nav class="nav2, nav3">Home</nav>
-        <nav class="nav3">Collection</nav>
-        <nav class="nav3">About</nav>
-        <nav class="nav3">Contact</nav>
+        <div class="full-menu">  
+            <nav id="menu" class="menu">
+                <ul>
+                    <li class="nav1">This Interior</li>
+                    <li class="nav2, nav3">Home</li>
+                    <li class="nav3">Collection</liv>
+                    <li class="nav3">About</li>
+                    <li class="nav3">Contact</li>
+                </ul>
+            </nav>  
+        </div> 
+        <div class="hamburguer">  
+            <div class="lines line-top"></div>  
+            <div class="lines line-mid"></div>  
+            <div class="lines line-bottom"></div>  
+         </div>  
     </header>
     <main class="container">
         <section class="container-left">
@@ -38,6 +51,6 @@
         </section>
     </main>
     <footer>created by <span><a href="https://visigoyo.com/">VisiGoyo</a></span> - devChallenges.io</footer>
-    
+    <script type="module" src="./js/script.js"></script>
 </body>
 </html>
