Finish hamburguer menu, Css must update

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
    
   
     <header>
+        <nav class="nav1">This Interior</nav>
         <div class="full-menu">  
             <nav id="menu" class="menu">
                 <ul>
-                    <li class="nav1">This Interior</li>
+                    
                     <li class="nav2, nav3">Home</li>
                     <li class="nav3">Collection</liv>
                     <li class="nav3">About</li>
@@ -28,7 +29,7 @@
             <div class="lines line-bottom"></div>  
          </div>  
     </header>
-    <main class="container">
+    <main class="content">
         <section class="container-left">
             <h1>Modern Interior</h1>
             <p>A full-Service residential & commercial interior design and staging company offering professional organizing & eco-services.</p>
