resolving problems from hamburguer menu

--- a/index.html
+++ b/index.html
@@ -8,21 +8,15 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-   
-  
-    <header>
-        <nav class="nav1">This Interior</nav>
-        <div class="full-menu">  
-            <nav id="menu" class="menu">
-                <ul>
-                    
-                    <li class="nav2, nav3">Home</li>
-                    <li class="nav3">Collection</liv>
-                    <li class="nav3">About</li>
-                    <li class="nav3">Contact</li>
-                </ul>
-            </nav>  
-        </div> 
+   <header>
+        <div class="full-menu">
+        <nav class="nav1 interior">This Interior</nav>
+        <nav class="nav2 nav3 home">Home</nav>
+        <nav class="nav3 collection">Collection</nav>
+        <nav class="nav3 about">About</nav>
+        <nav class="nav3 contact">Contact</nav>
+        </div>  
+         
         <div class="hamburguer">  
             <div class="lines line-top"></div>  
             <div class="lines line-mid"></div>  
